--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <div class="container">
         <h1>Sheero Design Component System</h1>
         <h2> by Kavya Jayaprakash </h2>
-        <p>Sheero Design System** is a playful yet functional design framework inspired by the personality and charm of Sheero. Just like Sheero, it embodies warmth, reliability, and a touch of curiosity, making digital experiences feel intuitive and engaging. This system balances friendly aesthetics with strong usability principles, ensuring designs are approachable, adaptable, and full of character.</p>
+        <p>Sheero Design System is a playful yet functional design framework inspired by the personality and charm of Sheero. Just like Sheero, it embodies warmth, reliability, and a touch of curiosity, making digital experiences feel intuitive and engaging. This system balances friendly aesthetics with strong usability principles, ensuring designs are approachable, adaptable, and full of character.</p>
+        <div class="row">
+            <div class="col"><h2>1. Typography</h2></div>
+        </div>
         <div class="row">
             <div class="col">
                 <h2>column 1</h2>
