class. buttons, colours

--- a/index.html
+++ b/index.html
@@ -1,31 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rubik+Mono+One&display=swap"
+        rel="stylesheet">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="styles.css" rel="stylessheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="styles.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
-        <h1>Sheero Design Component System</h1>
+        <h1 class="emphasized" style="font-size: 2rem;">Sheero Design Component System</h1>
         <h2> by Kavya Jayaprakash </h2>
-        <p>Sheero Design System is a playful yet functional design framework inspired by the personality and charm of Sheero. Just like Sheero, it embodies warmth, reliability, and a touch of curiosity, making digital experiences feel intuitive and engaging. This system balances friendly aesthetics with strong usability principles, ensuring designs are approachable, adaptable, and full of character.</p>
+        <p>Sheero Design System is a playful yet functional design framework inspired by the personality and charm of
+            Sheero. Just like Sheero, it embodies warmth, reliability, and a touch of curiosity, making digital
+            experiences feel intuitive and engaging. This system balances friendly aesthetics with strong usability
+            principles, ensuring designs are approachable, adaptable, and full of character.</p>
         <div class="row">
-            <div class="col"><h2>1. Typography</h2></div>
+            <div class="col">
+                <h2>1. Typography</h2>
+            </div>
         </div>
         <div class="row">
             <div class="col">
-                <h2>column 1</h2>
+                <h3>Headings</h3>
+                <hr>
+                <h1 class="emphasized">H1 Sheero Heading</h1>
+                <h2><b>H2 Sheero Heading</b></h2>
+                <h3>H3 Sheero Heading</h3>
+                <h4>H4 Sheero Heading</h4>
+                <h5>H5 Sheero Heading</h5>
+                <h6>H6 Sheero Heading</h6>
             </div>
 
+            <div class="col">
+                <h3>Paragraphs</h3>
+                <hr>
+                <p>Paragraphs in the Sheero Design System are concise, warm, and engaging, reflecting Sheero’s friendly
+                    and approachable nature.</p>
+                <p class="italics"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime perferendis qui
+                    culpa, deserunt repellendus delectus recusandae temporibus, vero, unde fugit aliquam autem quisquam
+                    distinctio.</p>
+            </div>
+        </div>
+        <!--Button-->
+        <div class="row">
+            <div class="col">
+                <h2>2. Buttons</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="row">
                 <div class="col">
-                    <h2>column 2</h2>
+                    <h3>Full Buttons</h3>
+                    <hr>
+                    <button type="button" class="btn btn-primary">Primary</button>
+                    <button type="button" class="btn btn-secondary">Secondary</button>
+                    <button type="button" class="btn btn-success">Success</button>
+                    <button type="button" class="btn btn-danger">Danger</button>
+                    <button type="button" class="btn btn-warning">Warning</button>
+                </div>
+                <div class="col">
+                    <h3>Outlined Buttons</h3>
+                    <hr>
+                    <button type="button" class="btn btn-outline-primary">Primary</button>
+                    <button type="button" class="btn btn-outline-secondary">Secondary</button>
+                    <button type="button" class="btn btn-outline-success">Success</button>
+                    <button type="button" class="btn btn-outline-danger">Danger</button>
+                    <button type="button" class="btn btn-outline-warning">Warning</button>
+                </div>
             </div>
         </div>
     </div>
@@ -33,8 +84,11 @@
 
 
 
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
- 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
