remove / from img src

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                         <img src="images/Dog1.png" class="d-block w-100" alt="dog1">
                       </div>
                       <div class="carousel-item">
-                        <img src="/images/Dog2.jpg" class="d-block w-100" alt="dog2">
+                        <img src="images/Dog2.jpg" class="d-block w-100" alt="dog2">
                       </div>
                       <div class="carousel-item">
                         <img src="images/Dog3.png" class="d-block w-100" alt="dog3">
