--- a/index.html
+++ b/index.html
@@ -28,16 +28,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link active" href="#typography">Typography</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Sheero</a>
+                        <a class="nav-link" href="#buttons">Buttons</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pawducts</a>
+                        <a class="nav-link" href="#forms">Forms & Inputs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#cards">Cards & Alerts & Badges</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#carousel">Carousel</a>
                     </li>
                 </ul>
             </div>
@@ -45,19 +48,17 @@
     </nav>
 
     <div class="container">
-        <h1 class="emphasized" style="font-size: 2rem;">Sheero Design Component System</h1>
+        <h1 class="emphasized" id="typography" style="font-size: 2rem;">Sheero Design Component System</h1>
         <h2> by Kavya Jayaprakash </h2>
         <p>Sheero Design System is a playful yet functional design framework inspired by the personality and charm of
             Sheero. Just like Sheero, it embodies warmth, reliability, and a touch of curiosity, making digital
             experiences feel intuitive and engaging. This system balances friendly aesthetics with strong usability
             principles, ensuring designs are approachable, adaptable, and full of character.</p>
-        <div class="row">
+
+        <!-- Typography Section -->
+        <div id="typography" class="row">
             <div class="col">
                 <h2>1. Typography</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
                 <h3>Headings</h3>
                 <hr>
                 <h1 class="emphasized">H1 Sheero Heading</h1>
@@ -66,122 +67,83 @@
                 <h4>H4 Sheero Heading</h4>
                 <h5>H5 Sheero Heading</h5>
                 <h6>H6 Sheero Heading</h6>
-            </div>
-
-            <div class="col">
                 <h3>Paragraphs</h3>
                 <hr>
                 <p>Paragraphs in the Sheero Design System are concise, warm, and engaging, reflecting Sheero’s friendly
                     and approachable nature.</p>
-                <p class="italics"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime perferendis qui
-                    culpa, deserunt repellendus delectus recusandae temporibus, vero, unde fugit aliquam autem quisquam
-                    distinctio.</p>
             </div>
         </div>
-        <!--Button-->
-        <div class="row">
+
+        <!-- Buttons Section -->
+        <div id="buttons" class="row mt-5">
             <div class="col">
                 <h2>2. Buttons</h2>
+                <hr>
+                <div class="row">
+                    <div class="col">
+                        <h3>Full Buttons</h3>
+                        <button type="button" class="btn btn-primary">Primary</button>
+                        <button type="button" class="btn btn-secondary">Secondary</button>
+                        <button type="button" class="btn btn-success">Success</button>
+                        <button type="button" class="btn btn-danger">Danger</button>
+                    </div>
+                    <div class="col">
+                        <h3>Outlined Buttons</h3>
+                        <button type="button" class="btn btn-outline-primary">Primary</button>
+                        <button type="button" class="btn btn-outline-secondary">Secondary</button>
+                        <button type="button" class="btn btn-outline-success">Success</button>
+                        <button type="button" class="btn btn-outline-danger">Danger</button>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="row">
-                <div class="col">
-                    <h3>Full Buttons</h3>
-                    <hr>
-                    <button type="button" class="btn btn-primary">Primary</button>
-                    <button type="button" class="btn btn-secondary">Secondary</button>
-                    <button type="button" class="btn btn-success">Success</button>
-                    <button type="button" class="btn btn-danger">Danger</button>
-                    <button type="button" class="btn btn-warning">Warning</button>
-                </div>
-                <div class="col">
-                    <h3>Outlined Buttons</h3>
-                    <hr>
-                    <button type="button" class="btn btn-outline-primary">Primary</button>
-                    <button type="button" class="btn btn-outline-secondary">Secondary</button>
-                    <button type="button" class="btn btn-outline-success">Success</button>
-                    <button type="button" class="btn btn-outline-danger">Danger</button>
-                    <button type="button" class="btn btn-outline-warning">Warning</button>
-                </div>
-            </div>
-            <!-- Forms & Inputs -->
-            <div class="row">
-                <div class="col">
-                    <h2>3. Forms & Inputs</h2>
-                </div>
-            </div>
 
-            <div class="row">
-                <div class="col-md-6">
-                    <h3>Text Input</h3>
-                    <input type="text" class="form-control" placeholder="Enter text here">
-                </div>
-                <div class="col-md-6">
-                    <h3>Select Dropdown</h3>
-                    <select class="form-select">
-                        <option selected>Choose an option</option>
-                        <option value="1">Option 1</option>
-                        <option value="2">Option 2</option>
-                        <option value="3">Option 3</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row mt-3">
-                <div class="col-md-6">
-                    <h3>Checkboxes</h3>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="check1">
-                        <label class="form-check-label" for="check1">Check this box</label>
+        <!-- Forms Section -->
+        <div id="forms" class="row mt-5">
+            <div class="col">
+                <h2>3. Forms & Inputs</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>Text Input</h3>
+                        <input type="text" class="form-control" placeholder="Enter text here">
                     </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="check2">
-                        <label class="form-check-label" for="check2">Another option</label>
+                    <div class="col-md-6">
+                        <h3>Select Dropdown</h3>
+                        <select class="form-select">
+                            <option selected>Choose an option</option>
+                            <option value="1">Option 1</option>
+                            <option value="2">Option 2</option>
+                        </select>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <h3>Radio Buttons</h3>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="radioGroup" id="radio1">
-                        <label class="form-check-label" for="radio1">Option 1</label>
+                <div class="row mt-3">
+                    <div class="col-md-6">
+                        <h3>Checkboxes</h3>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="check1">
+                            <label class="form-check-label" for="check1">Check this box</label>
+                        </div>
                     </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="radioGroup" id="radio2">
-                        <label class="form-check-label" for="radio2">Option 2</label>
+                    <div class="col-md-6">
+                        <h3>Radio Buttons</h3>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="radioGroup" id="radio1">
+                            <label class="form-check-label" for="radio1">Option 1</label>
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <div class="row mt-3">
-                <div class="col">
-                    <h3>Textarea</h3>
-                    <textarea class="form-control" rows="4" placeholder="Write something..."></textarea>
-                </div>
-            </div>
-
-            <div class="row mt-3">
-                <div class="col">
-                    <h3>Input Group</h3>
-                    <div class="input-group">
-                        <span class="input-group-text">@</span>
-                        <input type="text" class="form-control" placeholder="Username">
-                    </div>
-                </div>
-            </div>
-
         </div>
-        <!-- 🐶 Sheero's Components: Cards, Alerts & Badges -->
 
-        <div class="row mt-5">
+        <!-- Cards, Alerts & Badges Section -->
+        <div id="cards" class="row mt-5">
             <div class="col">
                 <h2>4. Cards, Alerts & Badges</h2>
-            </div>
-        </div>
+                <hr>
 
-        <!-- Card Component -->
-        <div class="row mt-3">
-            <div class="col-md-4">
-                <div class="card sheero-card">
+                <!-- Large Card -->
+                <div class="card sheero-card mb-4" style="width: 18rem;">
                     <div class="card-header">🐾 Featured Pawfile</div>
                     <div class="card-body">
                         <h5 class="card-title">Meet Sheero!</h5>
@@ -191,10 +153,9 @@
                     </div>
                     <div class="card-footer">Updated: Just now</div>
                 </div>
-            </div>
 
-            <div class="col-md-4">
-                <div class="card sheero-card">
+                <!-- Small Card -->
+                <div class="card sheero-card mb-4" style="width: 12rem;">
                     <div class="card-header">🐕 Training Tips</div>
                     <div class="card-body">
                         <h5 class="card-title">Sheero’s Pro Tips</h5>
@@ -202,76 +163,65 @@
                             results.</p>
                         <a href="#" class="btn btn-success">Learn More</a>
                     </div>
-                    <div class="card-footer">Updated: 1 hour ago</div>
+                </div>
+
+                <!-- Alerts -->
+                <div class="row mt-4">
+                    <div class="col-md-6">
+                        <div class="alert alert-primary" role="alert">
+                            🐶 Sheero Says: "Stay pawsitive and keep wagging!"
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="alert alert-warning" role="alert">
+                            ⚠️ Warning: Too much tail wagging can cause zoomies!
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Badges -->
+                <div class="row mt-3">
+                    <div class="col">
+                        <h3>Achievement Badges</h3>
+                        <span class="badge bg-primary">Top Dog</span>
+                        <span class="badge bg-success">Best Behaved</span>
+                        <span class="badge bg-warning">Snack Lover</span>
+                        <span class="badge bg-danger">Zoomies Champion</span>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <!-- Alerts -->
-        <div class="row mt-4">
-            <div class="col-md-6">
-                <div class="alert alert-primary" role="alert">
-                    🐶 Sheero Says: "Stay pawsitive and keep wagging!"
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="alert alert-warning" role="alert">
-                    ⚠️ Warning: Too much tail wagging can cause zoomies!
-                </div>
-            </div>
-        </div>
-
-        <!-- Badges -->
-        <div class="row mt-3">
+        <!-- Carousel Section -->
+        <div id="carousel" class="row mt-5">
             <div class="col">
-                <h3>Achievement Badges</h3>
-                <span class="badge bg-primary">Top Dog</span>
-                <span class="badge bg-success">Best Behaved</span>
-                <span class="badge bg-warning">Snack Lover</span>
-                <span class="badge bg-danger">Zoomies Champion</span>
-            </div>
-        </div>
-
-        <!--Slider-->
-        <div class="row">
-            <div class="col">
-                <h2> 3. Slider Styles</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
+                <h2>5. Image Slider</h2>
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="images/Dog1.png" class="d-block w-100" alt="dog1">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/Dog2.jpg" class="d-block w-100" alt="dog2">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/Dog3.png" class="d-block w-100" alt="dog3">
-                      </div>
+                        <div class="carousel-item active">
+                            <img src="images/Dog1.png" class="d-block w-100" alt="dog1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/Dog2.jpg" class="d-block w-100" alt="dog2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/Dog3.png" class="d-block w-100" alt="dog3">
+                        </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     </button>
-                  </div>
-
+                </div>
+            </div>
         </div>
+    </div>
 
-
-
-
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-
 </body>
 
 </html>
