--- a/index.html
+++ b/index.html
@@ -47,28 +47,51 @@
         </div>
     </nav>
 
-    <div class="container">
-        <h1 class="emphasized" id="typography" style="font-size: 2rem;">Sheero Design Component System</h1>
-        <h2> by Kavya Jayaprakash </h2>
-        <p>Sheero Design System is a playful yet functional design framework inspired by the personality and charm of
+    <div class="container mt-5">
+        <h1 class="emphasized" id="typography" style="font-size: 2.5rem; text-align: center;">Sheero Design Component System</h1>
+        <h2 class="text-center" style="font-size: 1.2rem;">by Kavya Jayaprakash</h2>
+        <hr>
+
+        <p class="text-center">Sheero Design System is a playful yet functional design framework inspired by the personality and charm of
             Sheero. Just like Sheero, it embodies warmth, reliability, and a touch of curiosity, making digital
             experiences feel intuitive and engaging. This system balances friendly aesthetics with strong usability
             principles, ensuring designs are approachable, adaptable, and full of character.</p>
 
+        <button class="btn btn-info d-block mx-auto" data-bs-toggle="modal" data-bs-target="#birthdayModal">Click here to know Sheero's birthday</button>
+
+        <!-- Modal for Sheero's Birthday -->
+        <div class="modal fade" id="birthdayModal" tabindex="-1" aria-labelledby="birthdayModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="birthdayModalLabel">Sheero's Birthday</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Sheero's birthday is on 25th April 2018! 🎉
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Typography Section -->
-        <div id="typography" class="row">
-            <div class="col">
+        <div id="typography" class="row mt-5">
+            <div class="col-md-6">
                 <h2>1. Typography</h2>
-                <h3>Headings</h3>
                 <hr>
+                <h3>Headings</h3>
                 <h1 class="emphasized">H1 Sheero Heading</h1>
                 <h2><b>H2 Sheero Heading</b></h2>
                 <h3>H3 Sheero Heading</h3>
                 <h4>H4 Sheero Heading</h4>
                 <h5>H5 Sheero Heading</h5>
                 <h6>H6 Sheero Heading</h6>
+            </div>
+            <div class="col-md-6">
                 <h3>Paragraphs</h3>
-                <hr>
                 <p>Paragraphs in the Sheero Design System are concise, warm, and engaging, reflecting Sheero’s friendly
                     and approachable nature.</p>
             </div>
@@ -98,6 +121,17 @@
             </div>
         </div>
 
+        <!-- Achievement Badges -->
+        <div class="row mt-4">
+            <div class="col">
+                <h3>Achievement Badges</h3>
+                <span class="badge bg-primary">Top Dog</span>
+                <span class="badge bg-success">Best Behaved</span>
+                <span class="badge bg-warning">Snack Lover</span>
+                <span class="badge bg-danger">Zoomies Champion</span>
+            </div>
+        </div>
+
         <!-- Forms Section -->
         <div id="forms" class="row mt-5">
             <div class="col">
@@ -106,14 +140,14 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h3>Text Input</h3>
-                        <input type="text" class="form-control" placeholder="Enter text here">
+                        <input type="text" class="form-control" placeholder="Write a letter to Sheero...">
                     </div>
                     <div class="col-md-6">
                         <h3>Select Dropdown</h3>
                         <select class="form-select">
-                            <option selected>Choose an option</option>
-                            <option value="1">Option 1</option>
-                            <option value="2">Option 2</option>
+                            <option selected>Dog Treats</option>
+                            <option value="1">Chew Toy</option>
+                            <option value="2">Collar</option>
                         </select>
                     </div>
                 </div>
@@ -136,57 +170,64 @@
             </div>
         </div>
 
-        <!-- Cards, Alerts & Badges Section -->
+        <!-- Cards Section -->
         <div id="cards" class="row mt-5">
             <div class="col">
                 <h2>4. Cards, Alerts & Badges</h2>
                 <hr>
-
-                <!-- Large Card -->
-                <div class="card sheero-card mb-4" style="width: 18rem;">
-                    <div class="card-header">🐾 Featured Pawfile</div>
-                    <div class="card-body">
-                        <h5 class="card-title">Meet Sheero!</h5>
-                        <p class="card-text">Sheero is a playful pup who loves belly rubs and treats. Always ready for
-                            an adventure!</p>
-                        <a href="#" class="btn btn-primary">Read More</a>
-                    </div>
-                    <div class="card-footer">Updated: Just now</div>
-                </div>
-
-                <!-- Small Card -->
-                <div class="card sheero-card mb-4" style="width: 12rem;">
-                    <div class="card-header">🐕 Training Tips</div>
-                    <div class="card-body">
-                        <h5 class="card-title">Sheero’s Pro Tips</h5>
-                        <p class="card-text">Consistency is key! Train your pup with positive reinforcement for the best
-                            results.</p>
-                        <a href="#" class="btn btn-success">Learn More</a>
-                    </div>
-                </div>
-
-                <!-- Alerts -->
-                <div class="row mt-4">
-                    <div class="col-md-6">
-                        <div class="alert alert-primary" role="alert">
-                            🐶 Sheero Says: "Stay pawsitive and keep wagging!"
+                <div class="row">
+                    <!-- Card 1 -->
+                    <div class="col-md-4">
+                        <div class="card sheero-card mb-4">
+                            <img src="images/Dog1.png" class="card-img-top" alt="dog1">
+                            <div class="card-body">
+                                <h5 class="card-title">Sheero’s Adventure</h5>
+                                <p class="card-text">Join Sheero on his exciting adventure filled with fun and surprises.</p>
+                                <a href="#" class="btn btn-primary">Learn More</a>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="alert alert-warning" role="alert">
-                            ⚠️ Warning: Too much tail wagging can cause zoomies!
+
+                    <!-- Card 2 -->
+                    <div class="col-md-4">
+                        <div class="card sheero-card mb-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Training Tips</h5>
+                                <p class="card-text">Master training techniques that will make your pup a pro.</p>
+                                <a href="#" class="btn btn-secondary">Get Tips</a>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <!-- Badges -->
-                <div class="row mt-3">
-                    <div class="col">
-                        <h3>Achievement Badges</h3>
-                        <span class="badge bg-primary">Top Dog</span>
-                        <span class="badge bg-success">Best Behaved</span>
-                        <span class="badge bg-warning">Snack Lover</span>
-                        <span class="badge bg-danger">Zoomies Champion</span>
+                    <!-- Card 3 -->
+                    <div class="col-md-4">
+                        <div class="card sheero-card mb-4">
+                            <div class="card-body">
+                                <h5 class="card-title"><i class="bi bi-bone"></i> Fun Facts</h5>
+                                <p class="card-text">Discover some quirky facts about Sheero's daily life.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 4 -->
+                    <div class="col-md-4">
+                        <div class="card sheero-card mb-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Sheero’s Favorites</h5>
+                                <p class="card-text">A look at Sheero's favorite treats and games.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 5 -->
+                    <div class="col-md-4">
+                        <div class="card sheero-card mb-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Pawfect Moments</h5>
+                                <p class="card-text">Capture Sheero’s cutest moments throughout the day!</p>
+                                <a href="#" class="btn btn-success">See More</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -196,16 +237,26 @@
         <div id="carousel" class="row mt-5">
             <div class="col">
                 <h2>5. Image Slider</h2>
+                <hr>
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="images/Dog1.png" class="d-block w-100" alt="dog1">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Sheero in Action</h5>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/Dog2.jpg" class="d-block w-100" alt="dog2">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Training Time</h5>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/Dog3.png" class="d-block w-100" alt="dog3">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Nap Time with Sheero</h5>
+                            </div>
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -217,6 +268,12 @@
                 </div>
             </div>
         </div>
+
+        <!-- Footer -->
+        <footer class="text-center mt-5">
+            <p>&copy; 2025 Sheero's Hub. All rights reserved.</p>
+            <p>Do not come without treats to meet Sheero! 🦴</p>
+        </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
