New almost final

--- a/index.html
+++ b/index.html
@@ -48,19 +48,23 @@
     </nav>
 
     <div class="container mt-5">
-        <h1 class="emphasized" id="typography" style="font-size: 2.5rem; text-align: center;">Sheero Design Component System</h1>
+        <h1 class="emphasized" id="typography" style="font-size: 2.5rem; text-align: center;">Sheero Design Component
+            System</h1>
         <h2 class="text-center" style="font-size: 1.2rem;">by Kavya Jayaprakash</h2>
         <hr>
 
-        <p class="text-center">Sheero Design System is a playful yet functional design framework inspired by the personality and charm of
+        <p class="text-center">Sheero Design System is a playful yet functional design framework inspired by the
+            personality and charm of
             Sheero. Just like Sheero, it embodies warmth, reliability, and a touch of curiosity, making digital
             experiences feel intuitive and engaging. This system balances friendly aesthetics with strong usability
             principles, ensuring designs are approachable, adaptable, and full of character.</p>
 
-        <button class="btn btn-info d-block mx-auto" data-bs-toggle="modal" data-bs-target="#birthdayModal">Click here to know Sheero's birthday</button>
+        <button class="btn btn-info d-block mx-auto" data-bs-toggle="modal" data-bs-target="#birthdayModal">Click here
+            to know Sheero's birthday</button>
 
         <!-- Modal for Sheero's Birthday -->
-        <div class="modal fade" id="birthdayModal" tabindex="-1" aria-labelledby="birthdayModalLabel" aria-hidden="true">
+        <div class="modal fade" id="birthdayModal" tabindex="-1" aria-labelledby="birthdayModalLabel"
+            aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -79,9 +83,9 @@
 
         <!-- Typography Section -->
         <div id="typography" class="row mt-5">
+            <h2>1. Typography</h2>
+            <hr>
             <div class="col-md-6">
-                <h2>1. Typography</h2>
-                <hr>
                 <h3>Headings</h3>
                 <h1 class="emphasized">H1 Sheero Heading</h1>
                 <h2><b>H2 Sheero Heading</b></h2>
@@ -92,8 +96,14 @@
             </div>
             <div class="col-md-6">
                 <h3>Paragraphs</h3>
-                <p>Paragraphs in the Sheero Design System are concise, warm, and engaging, reflecting Sheero’s friendly
-                    and approachable nature.</p>
+                <p>Paragraphs in the Sheero Design System are not just concise but full of personality—warm, engaging,
+                    and infused with the playful spirit of Sheero. The language we use mirrors Sheero’s lovable and
+                    mischievous character, making every piece of content feel approachable and fun. Whether it’s a
+                    friendly greeting, a helpful tip, or an exciting announcement, each paragraph is crafted to bring
+                    joy and connection. Just like Sheero’s wagging tail, the words flow effortlessly and energetically,
+                    creating a welcoming atmosphere where users feel like part of the family. The tone is relaxed but
+                    always lively, ensuring that every interaction with the design feels like a fun adventure with
+                    Sheero by your side.</p>
             </div>
         </div>
 
@@ -121,17 +131,6 @@
             </div>
         </div>
 
-        <!-- Achievement Badges -->
-        <div class="row mt-4">
-            <div class="col">
-                <h3>Achievement Badges</h3>
-                <span class="badge bg-primary">Top Dog</span>
-                <span class="badge bg-success">Best Behaved</span>
-                <span class="badge bg-warning">Snack Lover</span>
-                <span class="badge bg-danger">Zoomies Champion</span>
-            </div>
-        </div>
-
         <!-- Forms Section -->
         <div id="forms" class="row mt-5">
             <div class="col">
@@ -151,22 +150,36 @@
                         </select>
                     </div>
                 </div>
+                <!-- Checkboxes Section -->
                 <div class="row mt-3">
                     <div class="col-md-6">
                         <h3>Checkboxes</h3>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="check1">
-                            <label class="form-check-label" for="check1">Check this box</label>
+                            <label class="form-check-label" for="check1">Give Sheero a treat 🍖</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="check2">
+                            <label class="form-check-label" for="check2">Play fetch with Sheero 🎾</label>
                         </div>
                     </div>
+                </div>
+
+                <!-- Radio Buttons Section -->
+                <div class="row mt-3">
                     <div class="col-md-6">
                         <h3>Radio Buttons</h3>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="radioGroup" id="radio1">
-                            <label class="form-check-label" for="radio1">Option 1</label>
+                            <label class="form-check-label" for="radio1">Take Sheero for a walk 🦮</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="radioGroup" id="radio2">
+                            <label class="form-check-label" for="radio2">Cuddle Sheero on the couch 🛋️</label>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
 
@@ -182,7 +195,8 @@
                             <img src="images/Dog1.png" class="card-img-top" alt="dog1">
                             <div class="card-body">
                                 <h5 class="card-title">Sheero’s Adventure</h5>
-                                <p class="card-text">Join Sheero on his exciting adventure filled with fun and surprises.</p>
+                                <p class="card-text">Join Sheero on his exciting adventure filled with fun and
+                                    surprises.</p>
                                 <a href="#" class="btn btn-primary">Learn More</a>
                             </div>
                         </div>
@@ -232,6 +246,31 @@
                 </div>
             </div>
         </div>
+        <!-- Alerts Section -->
+        <div class="row mt-4">
+            <h3>Alerts</h3>
+            <div class="col-md-6">
+                <div class="alert alert-warning" role="alert">
+                    ⚠️ Warning: Too much tail wagging can cause zoomies!
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="alert alert-primary" role="alert">
+                    🐶 Stay pawsitive and keep wagging!
+                </div>
+            </div>
+        </div>
+        <!-- Achievement Badges -->
+        <div class="row mt-4">
+            <div class="col">
+                <h3>Achievement Badges</h3>
+                <span class="badge bg-primary">Top Dog</span>
+                <span class="badge bg-success">Best Behaved</span>
+                <span class="badge bg-warning">Snack Lover</span>
+                <span class="badge bg-danger">Zoomies Champion</span>
+            </div>
+        </div>
+
 
         <!-- Carousel Section -->
         <div id="carousel" class="row mt-5">
@@ -259,15 +298,32 @@
                             </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+
+                    <!-- Pagination Dots -->
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+
+                    <!-- Carousel Controls -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
                     </button>
                 </div>
             </div>
         </div>
+
 
         <!-- Footer -->
         <footer class="text-center mt-5">
@@ -277,8 +333,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
