--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
         <div class="modal fade" id="birthdayModal" tabindex="-1" aria-labelledby="birthdayModalLabel"
             aria-hidden="true">
             <div class="modal-dialog">
-                <div class="modal-content">
+                <div class="modal-content text-center"> <!-- Center align content -->
                     <div class="modal-header">
                         <h5 class="modal-title" id="birthdayModalLabel">Sheero's Birthday</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        Sheero's birthday is on 25th April 2018! 🎉
+                        Sheero's birthday is on<br>
+                        <strong>25th April 2018! 🎉</strong> <!-- Bold the date -->
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -80,6 +81,7 @@
                 </div>
             </div>
         </div>
+
 
         <!-- Typography Section -->
         <div id="typography" class="row mt-5">
