--- a/index.html
+++ b/index.html
@@ -63,24 +63,23 @@
             to know Sheero's birthday</button>
 
         <!-- Modal for Sheero's Birthday -->
-        <div class="modal fade" id="birthdayModal" tabindex="-1" aria-labelledby="birthdayModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content text-center"> <!-- Center align content -->
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="birthdayModalLabel">Sheero's Birthday</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        Sheero's birthday is on<br>
-                        <strong>25th April 2018! 🎉</strong> <!-- Bold the date -->
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    </div>
-                </div>
+<div class="modal fade" id="birthdayModal" tabindex="-1" aria-labelledby="birthdayModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content text-center"> <!-- Center align content -->
+            <div class="modal-header justify-content-center">
+                <h5 class="modal-title" id="birthdayModalLabel">Sheero's Birthday</h5>
+            </div>
+            <div class="modal-body">
+                Sheero's birthday is on<br>
+                <strong>25th April 2018! 🎉</strong> <!-- Bold the date -->
+            </div>
+            <div class="modal-footer justify-content-center">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
+    </div>
+</div>
+
 
 
         <!-- Typography Section -->
