--- a/index.html
+++ b/index.html
@@ -184,6 +184,24 @@
             </div>
         </div>
 
+        <div class="row mt-3">
+    <div class="col-md-6">
+        <h3>Range Slider</h3>
+        <input type="range" class="form-range" id="customRange" min="0" max="100" step="1" value="50">
+        <label for="customRange" class="form-label">Value: <span id="rangeValue">50</span></label>
+    </div>
+</div>
+
+<script>
+    const rangeInput = document.getElementById('customRange');
+    const rangeValue = document.getElementById('rangeValue');
+
+    rangeInput.addEventListener('input', function() {
+        rangeValue.textContent = rangeInput.value;
+    });
+</script>
+
+
         <!-- Cards Section -->
         <div id="cards" class="row mt-5">
             <div class="col">
