--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="col-md-6">
                 <h3>Paragraphs</h3>
-                <p>Paragraphs in the Sheero Design System are not just concise but full of personality—warm, engaging,
+                <p>Paragraphs11 in the Sheero Design System are not just concise but full of personality—warm, engaging,
                     and infused with the playful spirit of Sheero. The language we use mirrors Sheero’s lovable and
                     mischievous character, making every piece of content feel approachable and fun. Whether it’s a
                     friendly greeting, a helpful tip, or an exciting announcement, each paragraph is crafted to bring
