--- a/index.html
+++ b/index.html
@@ -258,19 +258,19 @@
             <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/DogA.png" class="d-block w-100" alt="dog1">
+                        <img src="images/DogA.png" class="d-block w-100" alt="DogA">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Sheero loves cats</h5>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/DogB.png" class="d-block w-100" alt="dog2">
+                        <img src="images/DogB.png" class="d-block w-100" alt="DogB">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Play Time</h5>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/DogC.png" class="d-block w-100" alt="dog3">
+                        <img src="images/DogC.png" class="d-block w-100" alt="DogC">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Nap Time with Sheero</h5>
                         </div>
