--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
 
        <!-- Image Slider and Sheero's Stories Section -->
-<div class="container mt-5">
+<div class="container mt-5" id="carousel">
     <div class="row">
         <!-- Left Section: Image Slider -->
         <div class="col-md-6">
